# Vitiate

./: .gitignore  .gitmodules  CMakeLists.txt  P1_D0_v0.0-Vitiate.docx  PruebasRed.xlsx  README.md  install_FPGA.sh  install_common_net_files.sh  keras.py  main.cpp  main.py  main_demo.py  test_ag.ipynb  test_csv.csv
Matlab/: RED.m  Test1.m  neurona.m  performanceMeasure.m  scriptTests.m  test1.m
VitiateNaive/: Matrix.cpp  Matrix.h  Neuron.cpp  Neuron.h  Parameters.h  RED.cpp  RED.h  VitiateNaive.cpp  VitiateNaive.sln  VitiateNaive.vcxproj  VitiateNaive.vcxproj.filters  coefsFile.txt  cpp.hint  main.cpp
VitiateNaive/Debug/: VitiateNaive.exe.recipe  VitiateNaive.ilk  VitiateNaive.vcxproj.FileListAbsolute.txt  vc142.idb
VitiateNaive/Debug/VitiateNaive.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VitiateNaive.lastbuildstate  link.read.1.tlog  link.write.1.tlog
VitiateNaive/x64/Debug/: VitiateNaive.exe.recipe  VitiateNaive.ilk  VitiateNaive.vcxproj.FileListAbsolute.txt  red.obj.enc  vc142.idb
VitiateNaive/x64/Debug/VitiateNaive.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VitiateNaive.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VitiateNaive/x64/Release/: VitiateNaive.exe.recipe  VitiateNaive.iobj
VitiateNaive/x64/Release/VitiateNaive.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VitiateNaive.lastbuildstate  VitiateNaive.write.1u.tlog  link.read.1.tlog  link.write.1.tlog
VitiateNaive_deprecated/: RED.cpp  VitiateNaive.cpp  VitiateNaive.sln  VitiateNaive.vcxproj
VitiateNaive_deprecated/Debug/VitiateNaive.tlog/: link.command.1.tlog
VitiateNaive_deprecated/x64/Debug/: vitiatenaive.obj.enc
VitiateNaive_deprecated/x64/Debug/VitiateNaive.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VitiateNaive_deprecated/x64/Release/: VitiateNaive.ipdb  VitiateNaive.vcxproj.FileListAbsolute.txt
VitiateNaive_deprecated/x64/Release/VitiateNaive.tlog/: link.command.1.tlog
cpu/: mathStructs.cpp  mathStructs.h  mathStructsCPU.cpp  mathStructsCPU.h  netCPU.cpp  netCPU.h
def/: defines.h
include/: algosCPU.h  builderCPU.h  layersCPU.h  mathCPU.h  mathStructs.h  memoryCPU.h  netAbstract.h  netBuilder.h  netFileManager.h  netHandler.h  netImagesTester.h  network.h  normCPU.h  utils.h
no_compilar/: shapeGenerator.cpp  shapeGenerator.h
python/: CNN_test.ipynb  base_test_ag.ipynb  mb_bench.ipynb  mb_debug.py  mb_gradient.py  mb_test.py  tests.py
python/schmidt/: BaseElement.py  main.py  plotter.py
python/utils/: AG_v1.py  CNN.py  logger.py  plotter.py
src/: netFileManager.cpp  netHandler.cpp  netImagesTester.cpp  netStandalone.cpp  vitiate.cpp
utils/: AG_v1.py  builderCPU.lib  decorators.py
utils/classes/: defines.h  mathStructs.h  network.h
utils/python/: CMakeLists.txt  csv_handler.py  in_out.py  json_handler.py  python_handler.cpp  python_handler.h  test_json.json  testing.py
